# ub2parser

./: .gitignore  LICENSE  README.md  README_zh.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ub2parser/: __init__.py  __main__.py  ast.py  cli.py  parser.py  serializer.py  tokenizer.py
